--- a/apps/facematching/templates/register_face.html
+++ b/apps/facematching/templates/register_face.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Student Registration</title>
-  {% load static %}
-  <script defer src="{% static 'face-api.min.js' %}"></script>
-  {% load static %}
-  <script defer src="{% static 'register.js' %}"></script>
-  <style>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Student Registration</title>
+    {% load static %}
+    <script defer src="{% static 'face-api.min.js' %}"></script>
+    {% load static %}
+    <script defer src="{% static 'register.js' %}"></script>
+    <style>
     * {
       margin: 0;
       padding: 0;
@@ -116,40 +116,109 @@
       background-color: orange;
       text-align: center;
     }
-  </style>
-</head>
+    
+    #main-content {
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+    }
 
-<body>
 
-  <div class="header">
-    <h1>Student Registration</h1>
-  </div>
-  <div class="top-container">
-    <!-- Input fields for student name and student ID -->
-    <div class="input-container">
-      <label for="student-name">Student Name:</label>
-      <input type="text" id="student-name" placeholder="Enter student name" required>
-    </div>
+    .error-response-modal {
+      display: none; /* Hidden by default */
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%); /* Center the modal */
+      width: 400px;
+      background-color: rgba(255, 0, 0, 0.8); /* Semi-transparent red background */
+      color: white; /* White text for better readability */
+      z-index: 1000; /* Ensure it appears above other elements */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Add a subtle shadow */
+      font-weight: bold; /* Bold text to grab attention */
+    }
 
-    <div class="input-container">
-      <label for="student-id">Student ID:</label>
-      <input type="text" id="student-id" placeholder="Enter student ID" required>
-    </div>
-  </div>
-  <!-- Video container -->
-  <div class="video-container">
-    <video id="video" width="720" height="560" autoplay muted></video>
-  </div>
+    .success-response-modal {
+      display: none; /* Hidden by default */
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%); /* Center the modal */
+      width: 400px;
+      background-color: rgba(0, 128, 0, 0.8); /* Semi-transparent green background */
+      color: white; /* White text for better readability */
+      z-index: 1000; /* Ensure it appears above other elements */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Add a subtle shadow */
+      font-weight: bold; /* Bold text to grab attention */
+    }
 
-  <button id="attend-button">Register</button>
 
-  <div>
-    <canvas width="720" height="560" id='show-img' style="display: none;"></canvas>
-  </div>
+    .loader {
+      position: fixed;
+      width: fit-content;
+      font-weight: bold;
+      font-family: monospace;
+      font-size: 30px;
+      clip-path: inset(0 3ch 0 0);
+      animation: l4 1s steps(4) infinite;
+    } 
+    .loader:before {
+      content:"Loading..."
+    }
+    @keyframes l4 {to{clip-path: inset(0 -1ch 0 0)}}
+    #close-modal{
+      padding: 10px;
+      border: 0;
+      border-radius: 10px;
+      cursor : pointer;
+    }
 
-  <script>
+    </style>
+  </head>
 
-  </script>
-</body>
+  <body>
+    <body>
+      <div id="main-content">
+        <div class="header">
+          <h1>Student Registration</h1>
+        </div>
+        <div class="top-container">
+          <div class="input-container">
+            <label for="student-name">Student Name:</label>
+            <input type="text" id="student-name" placeholder="Enter student name" required>
+          </div>
+          <div class="input-container">
+            <label for="student-id">Student ID:</label>
+            <input type="text" id="student-id" placeholder="Enter student ID" required>
+          </div>
+        </div>
+        <div class="video-container">
+          <video id="video" width="720" height="560" autoplay muted></video>
+        </div>
+        <button id="attend-button">Register</button>
+        <div>
+          <canvas width="720" height="560" id="show-img" style="display: none;"></canvas>
+        </div>
+      </div>
+
+      <div id="modal"  style="display: none;">
+        <div style="color:white; padding: 20px; text-align: center;">
+          <p class="response-modal-text"></p>
+          <button id="close-modal" onclick="closeModal()" style="margin-top: 20px;">Close</button>
+        </div>
+      </div>
+    </body>
+
+  </body>
 
 </html>
